[gd_scene load_steps=4 format=3 uid="uid://cqm8x5q2n7kya"]

[ext_resource type="Script" uid="uid://utv2splohytt" path="res://scripts/stations/TacticalStation.gd" id="1_0x8vq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.6, 1, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.8, 1, 0.7)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TacticalStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.02, 0.02, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ConnectionStatus" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="StatusContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/ConnectionStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StationTitle" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "TACTICAL STATION"
horizontal_alignment = 1

[node name="ConnectionLabel" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Status: DISCONNECTED"
horizontal_alignment = 1

[node name="WeaponsControl" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="WeaponsContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/WeaponsControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponsTitle" type="Label" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "WEAPONS CONTROL"

[node name="PhaserControls" type="VBoxContainer" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer"]
layout_mode = 2

[node name="PhaserLabel" type="Label" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/PhaserControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Phaser Banks"

[node name="PhaserPowerSlider" type="HSlider" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/PhaserControls"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="PhaserStatus" type="Label" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/PhaserControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Power: 50% | Status: Ready"

[node name="TorpedoControls" type="VBoxContainer" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer"]
layout_mode = 2

[node name="TorpedoLabel" type="Label" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/TorpedoControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Torpedo Tubes"

[node name="TorpedoTypeOption" type="OptionButton" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/TorpedoControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="TorpedoStatus" type="Label" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/TorpedoControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Loaded: 12/12 | Ready"

[node name="WeaponButtons" type="GridContainer" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer"]
layout_mode = 2
columns = 2

[node name="FirePhasersButton" type="Button" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/WeaponButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "FIRE
PHASERS"

[node name="FireTorpedoButton" type="Button" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/WeaponButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "FIRE
TORPEDO"

[node name="ChargeButton" type="Button" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/WeaponButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "CHARGE
WEAPONS"

[node name="StandbyButton" type="Button" parent="MainContainer/LeftPanel/WeaponsControl/WeaponsContainer/WeaponButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "STANDBY"

[node name="ShieldControl" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ShieldContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/ShieldControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShieldTitle" type="Label" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "SHIELD CONTROL"

[node name="ShieldPowerContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer"]
layout_mode = 2

[node name="ShieldPowerLabel" type="Label" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer/ShieldPowerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Power:"

[node name="ShieldPowerSlider" type="HSlider" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer/ShieldPowerContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="ShieldPowerValue" type="Label" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer/ShieldPowerContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 12
text = "80%"

[node name="ShieldStatus" type="Label" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "Shields: 100% | Frequency: 240.15"

[node name="ShieldButtons" type="HBoxContainer" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer"]
layout_mode = 2

[node name="RaiseShieldsButton" type="Button" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer/ShieldButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "RAISE
SHIELDS"

[node name="ModulateButton" type="Button" parent="MainContainer/LeftPanel/ShieldControl/ShieldContainer/ShieldButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "MODULATE
FREQUENCY"

[node name="PowerAllocation" type="Panel" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PowerContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/PowerAllocation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="PowerTitle" type="Label" parent="MainContainer/LeftPanel/PowerAllocation/PowerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "POWER ALLOCATION"

[node name="WeaponPowerContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/PowerAllocation/PowerContainer"]
layout_mode = 2

[node name="WeaponPowerLabel" type="Label" parent="MainContainer/LeftPanel/PowerAllocation/PowerContainer/WeaponPowerContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Weapons:"

[node name="WeaponPowerSlider" type="HSlider" parent="MainContainer/LeftPanel/PowerAllocation/PowerContainer/WeaponPowerContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.6

[node name="WeaponPowerValue" type="Label" parent="MainContainer/LeftPanel/PowerAllocation/PowerContainer/WeaponPowerContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "60%"

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TacticalDisplay" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="DisplayContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/TacticalDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayTitle" type="Label" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "TACTICAL DISPLAY"
horizontal_alignment = 1

[node name="TacticalViewport" type="SubViewport" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer"]
render_target_update_mode = 4

[node name="TacticalCamera" type="Camera2D" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/TacticalViewport"]
zoom = Vector2(0.002, 0.002)

[node name="TacticalObjects" type="Node2D" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/TacticalViewport"]

[node name="WeaponEffects" type="Node2D" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/TacticalViewport"]

[node name="DisplayControls" type="HBoxContainer" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer"]
layout_mode = 2

[node name="ZoomOutButton" type="Button" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/DisplayControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom Out"

[node name="ZoomInButton" type="Button" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/DisplayControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom In"

[node name="CenterButton" type="Button" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/DisplayControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Center on Ship"

[node name="ScanButton" type="Button" parent="MainContainer/CenterPanel/TacticalDisplay/DisplayContainer/DisplayControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Long Range Scan"

[node name="CombatLog" type="Panel" parent="MainContainer/CenterPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LogContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/CombatLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogTitle" type="Label" parent="MainContainer/CenterPanel/CombatLog/LogContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "COMBAT LOG"

[node name="LogScroll" type="ScrollContainer" parent="MainContainer/CenterPanel/CombatLog/LogContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogText" type="RichTextLabel" parent="MainContainer/CenterPanel/CombatLog/LogContainer/LogScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[color=red]Tactical Station Online[/color]
[color=gray]Weapons systems ready[/color]"
scroll_following = true

[node name="LogControls" type="HBoxContainer" parent="MainContainer/CenterPanel/CombatLog/LogContainer"]
layout_mode = 2

[node name="ClearLogButton" type="Button" parent="MainContainer/CenterPanel/CombatLog/LogContainer/LogControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Clear"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TargetInfo" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TargetContainer" type="VBoxContainer" parent="MainContainer/RightPanel/TargetInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="TargetTitle" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "TARGET INFORMATION"

[node name="TargetName" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "No Target Selected"

[node name="TargetDetails" type="VBoxContainer" parent="MainContainer/RightPanel/TargetInfo/TargetContainer"]
layout_mode = 2

[node name="TargetDistance" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetDetails"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Distance: --"

[node name="TargetBearing" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetDetails"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Bearing: --"

[node name="TargetHealth" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetDetails"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Hull: --"

[node name="TargetShields" type="Label" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetDetails"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Shields: --"

[node name="TargetButtons" type="HBoxContainer" parent="MainContainer/RightPanel/TargetInfo/TargetContainer"]
layout_mode = 2

[node name="LockTargetButton" type="Button" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "LOCK"

[node name="ScanTargetButton" type="Button" parent="MainContainer/RightPanel/TargetInfo/TargetContainer/TargetButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "SCAN"

[node name="AmmoStatus" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="AmmoContainer" type="VBoxContainer" parent="MainContainer/RightPanel/AmmoStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoTitle" type="Label" parent="MainContainer/RightPanel/AmmoStatus/AmmoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "AMMUNITION STATUS"

[node name="PhotonTorpedoes" type="Label" parent="MainContainer/RightPanel/AmmoStatus/AmmoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Photon Torpedoes: 12"

[node name="QuantumTorpedoes" type="Label" parent="MainContainer/RightPanel/AmmoStatus/AmmoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Quantum Torpedoes: 8"

[node name="ProximityMines" type="Label" parent="MainContainer/RightPanel/AmmoStatus/AmmoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Proximity Mines: 4"

[node name="PhaserCells" type="Label" parent="MainContainer/RightPanel/AmmoStatus/AmmoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Phaser Cells: 98%"

[node name="DamageControl" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="DamageContainer" type="VBoxContainer" parent="MainContainer/RightPanel/DamageControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="DamageTitle" type="Label" parent="MainContainer/RightPanel/DamageControl/DamageContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "DAMAGE CONTROL"

[node name="HullIntegrity" type="ProgressBar" parent="MainContainer/RightPanel/DamageControl/DamageContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HullLabel" type="Label" parent="MainContainer/RightPanel/DamageControl/DamageContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "Hull Integrity: 100%"

[node name="SystemsScroll" type="ScrollContainer" parent="MainContainer/RightPanel/DamageControl/DamageContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SystemsVBox" type="VBoxContainer" parent="MainContainer/RightPanel/DamageControl/DamageContainer/SystemsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponsSystem" type="Label" parent="MainContainer/RightPanel/DamageControl/DamageContainer/SystemsScroll/SystemsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "Weapons: OPERATIONAL"

[node name="ShieldsSystem" type="Label" parent="MainContainer/RightPanel/DamageControl/DamageContainer/SystemsScroll/SystemsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "Shields: OPERATIONAL"

[node name="SensorsSystem" type="Label" parent="MainContainer/RightPanel/DamageControl/DamageContainer/SystemsScroll/SystemsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "Sensors: OPERATIONAL"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "← Main Menu"
